added license in css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* by: ZIMONH src: https://github.com/zimonh/Bookmarks-Merger
+   License: https://creativecommons.org/licenses/by-nc-sa/4.0/ */
 body {
 	font-family: Consolas;
 	background-color: black;
